--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
         ]
     },
     "config": {
-        "preferred-install": "dist"
+        "preferred-install": "source"
     },
     "minimum-stability": "dev"
 }
